--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-probability_pro.bbl
-probability_pro.run.xml
-
-probability_pro.aux
-probability_pro.bcf
-probability_pro.blg
-probability_pro.fdb_latexmk
-probability_pro.fls
-probability_pro.log
-probability_pro.out
-probability_pro.pyg
-probability_pro.synctex.gz
+*.bbl
+*.run.xml
+*.aux
+*.xdv
+*.bcf
+*.blg
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.pyg
+*.synctex.gz
